Day21/k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-ml-app
spec:
  replicas: 1

  selector:
    matchLabels:
      app: iris-ml-app

  template:
    metadata:
      labels:
        app: iris-ml-app

    spec:
      containers:
        - name: iris-ml-container

          # CHANGE THIS to your Docker Hub image
          image: shivamrana28/iris-m1-app:v201

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          # Configuration from ConfigMap
