Day21/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-ml-service

spec:
  type: ClusterIP

  selector:
    app: iris-ml-app

  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
