Day21/k8/policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: mlflow
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: mlflow
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow-user-example-com/sa/default-editor
